// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fever Parlour retrieve and find events 1`] = `
[
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 10800000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/562315",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1777572000000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/562315",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1777640400000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/562315",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1777658400000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/562315",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1777917600000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/562315",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1778176800000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/562315",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1778245200000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/562315",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1778263200000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/562315",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1778695200000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/562315",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1778781600000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/562315",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1778850000000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/562315",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1778868000000,
      },
    ],
    "showingId": "feverup.com-562315",
    "title": "Taste Film presents The Goonies (1985)",
    "url": "https://feverup.com/m/562315",
  },
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 10800000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/569989",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1775480400000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/569989",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1775671200000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/569989",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1775757600000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/569989",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1775844000000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/569989",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1776276000000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/569989",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1776362400000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/569989",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1776430800000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/569989",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1776448800000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/569989",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1776880800000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/569989",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1776967200000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/569989",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1777053600000,
      },
    ],
    "showingId": "feverup.com-569989",
    "title": "Taste Film presents The Princess and The Frog (2009)",
    "url": "https://feverup.com/m/569989",
  },
]
`;

exports[`Fever The Moniker retrieve and find events 1`] = `
[
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 10800000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/562253",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1777122000000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/562253",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1777140000000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/562253",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1777204800000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/562253",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1777222800000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/562253",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1777726800000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/562253",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1777744800000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/562253",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1777809600000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/562253",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1777827600000,
      },
    ],
    "showingId": "feverup.com-562253",
    "title": "Taste Film presents White Chicks (2004)",
    "url": "https://feverup.com/m/562253",
  },
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 10800000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/562250",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1779541200000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/562250",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1779559200000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/562250",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1779624000000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/562250",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1779642000000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/562250",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1780146000000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/562250",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1780164000000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/562250",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1780228800000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/562250",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1780246800000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/562250",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1780750800000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/562250",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1780768800000,
      },
    ],
    "showingId": "feverup.com-562250",
    "title": "Taste Film presents Cloudy with a Chance of Meatballs (2009)",
    "url": "https://feverup.com/m/562250",
  },
]
`;

exports[`Fever The Refinery Citypoint retrieve and find events 1`] = `
[
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 10800000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/562301",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1777658400000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/562301",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1777726800000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/562301",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1777744800000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/562301",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1777809600000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/562301",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1777827600000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/562301",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1778263200000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/562301",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1778331600000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/562301",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1778349600000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/562301",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1778414400000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/562301",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1778432400000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/562301",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1778868000000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/562301",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1778954400000,
      },
    ],
    "showingId": "feverup.com-562301",
    "title": "Taste Film presents Bridesmaids (2011)",
    "url": "https://feverup.com/m/562301",
  },
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 10800000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/562307",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1780077600000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/562307",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1780146000000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/562307",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1780164000000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/562307",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1780682400000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/562307",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1780750800000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/562307",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1780768800000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/562307",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1780833600000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/562307",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1780851600000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/562307",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1781287200000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/562307",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1781352000000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/562307",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1781370000000,
      },
      {
        "accessibility": {},
        "bookingUrl": "https://feverup.com/m/562307",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1781438400000,
      },
    ],
    "showingId": "feverup.com-562307",
    "title": "Taste Film presents Guardians of The Galaxy (2014)",
    "url": "https://feverup.com/m/562307",
  },
]
`;
